--- a/index.html
+++ b/index.html
@@ -165,27 +165,26 @@
     // Сравнение идёт по нормализованному виду: нижний регистр, без пробелов, ё→е.
 
     const LEVELS = [
-      {
-        title: "Уровень 1. Пробный",
-        html: `Это демо. Введите код <b>кипиш</b>, чтобы перейти дальше.
-<p class="muted">(Здесь обычно текст задания, картинка, аудио или ссылка.)</p>`,
-        answers: ["кипиш", "kipish"],
-        hints: [
-          "Название харьковской команды из EN.",
-          "Пишется без пробелов; латиницей тоже подойдёт."
-        ]
-      },
-      {
-        title: "Уровень 2. Ещё один демо-уровень",
-        html: `Введите код <b>медведь</b> (демо). <br><span class="muted">Подсказка откроется через время, если нужно.</span>`,
-        answers: ["медведь", "medved", "medved"],
-        hints: [
-          "Один из участников, упомянутых тобой.",
-          "Код на русском в именительном падеже."
-        ]
-      }
-      // Добавляйте новые уровни по образцу ↑
-    ];
+  {
+    title: "Уровень 1. Пробный",
+    html: "Это демо. Введите код <b>кипиш</b>, чтобы перейти дальше.\n<p class=\"muted\">(Здесь обычно текст задания, картинка, аудио или ссылка.)</p>",
+    answers: ["кипиш", "kipish"],
+    hints: [
+      "Название харьковской команды из EN.",
+      "Пишется без пробелов; латиницей тоже подойдёт."
+    ]
+  },
+  {
+    title: "Уровень 2. Ещё один демо-уровень",
+    html: "Введите код <b>медведь</b> (демо). <br><span class=\"muted\">Подсказка откроется через время, если нужно.</span>",
+    answers: ["медведь", "medved"],
+    hints: [
+      "Один из участников, упомянутых тобой.",
+      "Код на русском в именительном падеже."
+    ]
+  }
+];
+
 
     const GAME_TITLE = 'Encounter Lite';
     const HINT_FIRST_DELAY_MS = 30000; // задержка до первой подсказки (мс). 0 — сразу
